deploy/overlays/production/reverb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reverb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - reverb.mydigitalschool.server.dylanbattig.fr
      secretName: reverb-tls
  rules:
    - host: reverb.mydigitalschool.server.dylanbattig.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reverb
                port:
                  name: main
